tidos/tests/view_macro/panics/empty_closing_tag.rs
use tidos::view;

fn empty_closing_tag() {
	view! {
		<div></>
	};
}

fn main() {}
